# nora

./: .env.example  .gitignore  .gitmodules  MANIFEST.in  README.md  nora  nora.py  nora.yml  pyproject.toml  setup.py
configs/: config.yaml
configs/arxiv/: default.yaml
configs/elsevier/: default.yaml
configs/hal/: default.yaml
configs/notion/: default.yaml
configs/proxy/: default.yaml
configs/springer/: default.yaml
configs/zotero/: default.yaml
nora/: __init__.py  arxiv_to_nora.py  elsevier_to_nora.py  hal_to_nora.py  springer_to_nora.py  zotero_to_nora.py
nora/parsers/: arxiv_parser.py  elsevier_parser.py  hal_parser.py  notion_parser.py  scholar.py  springer_parser.py  zotero_parser.py
nora/utils/: proxy.py
scripts/: add_nora_to_path_unix  nora
src/: __init__.py
src/nora/: __main__.py
src/nora/configs/: config.yaml
src/nora/parsers/: arxiv.py  notion.py  translation_server.py  zotero.py
src/nora/utils/: cli.py  config.py  keys.py  translation_server.py  venues.py  zotero.py
src/parsers/: arxiv.py  crossref.py  elsevier.py  hal.py  notion.py  springer.py  translation_server.py  zotero.py
src/utils/: env.py  folders.py  hydra.py  translation_server.py  venues.py
